--- a/charts/azure-pipelines-agent/values.yaml
+++ b/charts/azure-pipelines-agent/values.yaml
@@ -15,6 +15,8 @@ image:
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
+# whether to mount host docker.sock, default is false
+mountDocker: false
 
 serviceAccount:
   create: true
@@ -24,7 +26,8 @@ serviceAccount:
 podSecurityContext: {}
   # fsGroup: 2000
 
-securityContext: {}
+securityContext:
+  privileged: true
   # capabilities:
   #   drop:
   #   - ALL
@@ -39,11 +42,11 @@ deployment:
 
 resources:
   limits:
-    cpu: 2000m
-    memory: 512Mi
+    cpu: 0
+    memory: 0
   requests:
-    cpu: 100m
-    memory: 64Mi
+    cpu: 0
+    memory: 0
 
 nodeSelector: {}
 
